--- a/.github/workflows/master_ci.yml
+++ b/.github/workflows/master_ci.yml
@@ -16,7 +16,10 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
+          distribution: 'temurin'
           java-version: 21
+          java-package: jdk
+          architecture: x64
 
       - name: Cache Maven packages
         uses: actions/cache@v2
@@ -35,11 +38,19 @@ jobs:
       - name: Package application
         run: mvn package
 
+      - name: Rename JAR file
+        run: |
+          JAR_NAME=$(ls target/*.jar)
+          mv "$JAR_NAME" target/spring-demo-app.jar
+
+      - name: List target directory
+        run: ls -al target
+
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v2
         with:
-          name: SpringDemo
-          path: target/*.jar
+          name: spring-demo-app
+          path: target/spring-demo-app.jar
 
   release:
     needs: build
@@ -53,7 +64,10 @@ jobs:
       - name: Download JAR artifact
         uses: actions/download-artifact@v2
         with:
-          name: SpringDemo
+          name: spring-demo-app
+
+      - name: List downloaded artifacts
+        run: ls -al
 
       - name: Create GitHub Release
         id: create_release
@@ -72,6 +86,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/*.jar
+          asset_path: spring-demo-app.jar
           asset_name: SpringDemo.jar
           asset_content_type: application/java-archive
